finished my portfolio

--- a/src/pages/Home/Profile/Profile.css
+++ b/src/pages/Home/Profile/Profile.css
@@ -58,7 +58,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 5px 0px 0px #fff;
+    box-shadow: 0 5px 0px 0px #ece4e2;
     border-radius: 50%;
     height: 380px;
     width: 380px;
@@ -68,7 +68,7 @@
 .profile-picture-background {
     height: 92%;
     width: 92%;
-    background-image: url('../../../assets/Home/peter.jpg');
+    background-image: url('../../../assets/Home/profile_pic.png');
     background-size: cover;
     border-radius: 50%;
     background-repeat: no-repeat;
